[tool.poetry]
name = "routing"
version = "0.1.0"
description = ""
authors = ["Damian Owerko <damowerko@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "routing", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.5.1"
numpy = "^1.23.4"
scipy = "^1.9.3"
networkx = "^2.8.7"
matplotlib = "^3.5.1"
pytorch-lightning = "^1.7.5"
torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp39-cp39-linux_x86_64.whl"}
torch-cluster = {url = "https://data.pyg.org/whl/torch-1.12.0%2Bcu116/torch_cluster-1.6.0-cp39-cp39-linux_x86_64.whl"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-1.12.0%2Bcu116/torch_scatter-2.0.9-cp39-cp39-linux_x86_64.whl"}
torch-sparse = {url = "https://data.pyg.org/whl/torch-1.12.0%2Bcu116/torch_sparse-0.6.15-cp39-cp39-linux_x86_64.whl"}
torch-spline-conv = {url = "https://data.pyg.org/whl/torch-1.12.0%2Bcu116/torch_spline_conv-1.2.1-cp39-cp39-linux_x86_64.whl"}
torch-geometric = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
jupyter = "^1.0.0"
guildai = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
